logs/reportexport.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Migrate-2.0.4.egg-info'...
Listing './lib/python3.5/site-packages/Flask_SQLAlchemy-2.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Script-2.0.6.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/alembic'...
Listing './lib/python3.5/site-packages/alembic/autogenerate'...
Listing './lib/python3.5/site-packages/alembic/ddl'...
Listing './lib/python3.5/site-packages/alembic/operations'...
Listing './lib/python3.5/site-packages/alembic/runtime'...
Listing './lib/python3.5/site-packages/alembic/script'...
Listing './lib/python3.5/site-packages/alembic/templates'...
Listing './lib/python3.5/site-packages/alembic/templates/generic'...
Listing './lib/python3.5/site-packages/alembic/templates/multidb'...
Listing './lib/python3.5/site-packages/alembic/templates/pylons'...
Listing './lib/python3.5/site-packages/alembic/testing'...
Listing './lib/python3.5/site-packages/alembic/testing/plugin'...
Listing './lib/python3.5/site-packages/alembic/util'...
Listing './lib/python3.5/site-packages/alembic-0.9.6.egg-info'...
Listing './lib/python3.5/site-packages/cached_property-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/dicttoxml-1.7.4.egg-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_migrate'...
Listing './lib/python3.5/site-packages/flask_migrate/templates'...
Listing './lib/python3.5/site-packages/flask_migrate/templates/flask'...
Listing './lib/python3.5/site-packages/flask_migrate/templates/flask-multidb'...
Listing './lib/python3.5/site-packages/flask_script'...
Listing './lib/python3.5/site-packages/flask_sqlalchemy'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_editor-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/reportexport'...
Listing './lib/python3.5/site-packages/reportexport/templates'...
Listing './lib/python3.5/site-packages/reportexport-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
